# dpcourse-hw

./: .gitignore  README.md  flake.nix  pyproject.toml
dpcourse_hw1/: Solve.ipynb  eval.py  stats.py  typing.py
dpcourse_hw1/notebooks/: Solve.ipynb
hw1/: README.md  flake.nix  mypy.ini  pyproject.toml
hw1/dpcourse_hw1/: typing.py
hw1/dpcourse_hw1/notebooks/: Solve.ipynb
hw2/: README.md  flake.lock.license  flake.nix  mypy.ini  pyproject.toml
hw2/dpmedian/: __init__.py  __main__.py
