# SPDX-FileCopyrightText: 2021 Kirill Elagin <https://kir.elagin.me/>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "dpcourse-hw1"
version = "0.1.0"
description = "An attack on a non-so-differentially-private algorithm"
authors = ["Kirill Elagin <kirelagin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyter-packaging = "^0.7.12"
z3-solver = "^4.8.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
nbqa = "^0.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
