# SPDX-FileCopyrightText: 2021 Kirill Elagin <https://kir.elagin.me/>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "dpmedian"
version = "0.1.0"
description = "Differentially-private median"
authors = ["Kirill Elagin <kirelagin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.800"

[tool.poetry.scripts]
median-stats = "dpmedian.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
